asteria/core/tests/errors/elaboration_errors/too_few_type_arguments_in_constructor_pattern.asteriacore
data Id (a : Type) where
   | MkId {b : Type} (x : b) : Test$Id(b)
   ;;

x : forall {a : Type}. Test$Id(a) -> a
  = \{a} -> \i ->
      case i of
         | MkId(;y) -> y;;
